# Trivia-Forge

./: README.md  package-lock.json
.github/workflows/: python-app.yml
trivia-forge/: .env  .gitignore  openai-test.py  package-lock.json  package.json
trivia-forge/backend/: .env  app.py  config.py  main.py  pyproject.toml  requirements.txt
trivia-forge/backend/endpoints/: category.py  chatgpt.py  choice.py  game.py  home.py  question.py  user.py
trivia-forge/frontend/: .gitignore  index.html  package-lock.json  package.json
trivia-forge/frontend/src/: App.css  App.jsx
trivia-forge/frontend/src/Components/: Categories.jsx  Choices.jsx  GameCategories.jsx  GameQuestions.jsx  GenBtnTooltip.jsx  GenerateButtonTooltip.jsx  Nav.jsx  Navigation.jsx  Questions.jsx  QuestionsCount.jsx  ReviewCategories.jsx  ReviewChoices.jsx  ReviewQuestions.jsx  Slideshow.jsx  UnorderedCategoriesList.jsx  useStore.jsx
trivia-forge/frontend/src/Model/: Category.jsx  Choice.jsx  Game.jsx  Question.jsx  User.jsx
trivia-forge/frontend/src/Models/: Category.jsx  Choice.jsx  Game.jsx  Question.jsx  State.jsx  User.jsx
trivia-forge/frontend/src/Pages/: HomePage.jsx  LoginPage.jsx  MyTrivia.jsx  SignUpPage.jsx  TriviaGenPage.jsx  TriviaReviewPage.jsx  myTriviaPage.jsx
trivia-forge/frontend/src/Services/: Services.jsx  TF-db_services.jsx
trivia-forge/src/: App.js  App.jsx
trivia-forge/src/Components/: Nav.jsx
trivia-forge/src/Pages/: HomePage.js  HomePage.jsx  MyTrivia.js  TriviaGenPage.jsx
trivia-forge/src/components/: BootstrapTable.js
(+17 files in other folders)
